--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,6 @@
 spring.application.name=myPage
 spring.datasource.url=jdbc:mariadb://localhost:3306/shoppingMall
 spring.datasource.username=root
-spring.datasource.password=Ckim0216!
+spring.datasource.password=1234
 spring.datasource.driver-class-name=org.mariadb.jdbc.Driver
 spring.jpa.hibernate.ddl-auto=create-drop
